--- a/pubsubplus/values.yaml
+++ b/pubsubplus/values.yaml
@@ -127,8 +127,8 @@ storage:
   #  false is not recommended for production use
   persistent: true
 
-  # setVolumePermissions: if true then change the owner of the PubSub+ directories under the persistent volume mount point to
-  #   securityContext.runAsUser (must be set). securityContext.enabled must be true
+  # setVolumePermissions: if true then change the owner of the PubSub+ directories under the
+  #   persistent volume mount point to securityContext.runAsUser (must be set)
   # setVolumePermissions: true
 
   # storage.customVolumeMount enables specifying a YAML fragment how the data volume should be mounted.
