Adding test coverage for latest published charts

--- a/.travis.yml
+++ b/.travis.yml
@@ -78,13 +78,7 @@ script:
 - helm install pubsubplus-ha --dry-run
 - helm lint pubsubplus-dev
 - helm install pubsubplus-dev --dry-run
-
-after_success:
-- echo "Test Success - Branch($TRAVIS_BRANCH) Pull Request($TRAVIS_PULL_REQUEST) Tag($TRAVIS_TAG)"
-- echo "YAML linted"
-- echo "GKE cluster deployment tested"
-- echo "Messaging tested"
-- echo "Chart ha and dev variants created and smoke-tested"
+- # Publishto gh-pages and test
 - >
   if [ "$TRAVIS_PULL_REQUEST" = "false" ] && [ "$TRAVIS_BRANCH" = "HelmReorg" ]; then
     git config --global user.email "travis@travis-ci.org";
@@ -93,13 +87,23 @@ after_success:
     git clone --quiet --branch=gh-pages https://${GH_TOKEN}@github.com/SolaceDev/solace-kubernetes-quickstart gh-pages > /dev/null 2>&1;
     mv pubsubplus-*.tgz gh-pages/helm-charts/;
     helm repo index gh-pages/helm-charts/ --url https://solacedev.github.io/solace-kubernetes-quickstart/helm-charts;
-    cd gh-pages;
+    pushd gh-pages;
     git add -f .;
     git commit -m "Latest helm chart updates on successful travis build $TRAVIS_BUILD_NUMBER auto-pushed to gh-pages";
     git remote add origin-pages https://${GH_TOKEN}@github.com/SolaceDev/solace-kubernetes-quickstart.git > /dev/null 2>&1;
     git push --quiet --set-upstream origin-pages gh-pages;
     echo "Updated and pushed GH pages!";
+    popd;
+    bash docs/helm-charts/test-chart-variants-from-gh-pages.sh https://solacedev.github.io/solace-kubernetes-quickstart/helm-charts;
   fi
+
+after_success:
+- echo "Test Success - Branch($TRAVIS_BRANCH) Pull Request($TRAVIS_PULL_REQUEST) Tag($TRAVIS_TAG)"
+- echo "YAML linted"
+- echo "GKE cluster deployment tested"
+- echo "Messaging tested"
+- echo "Chart ha and dev variants created and smoke-tested"
+
 after_script:
 - gcloud container clusters delete $TESTCLUSTERNAME --quiet --zone us-east4-a
 - gcloud compute disks list | grep travis | sed 1d $rpt | while read -r a b c; do
