--- a/.travis.yml
+++ b/.travis.yml
@@ -80,7 +80,7 @@ script:
 - helm install pubsubplus-dev --dry-run
 - # Publish to gh-pages and test
 - >
-  if [ "$TRAVIS_PULL_REQUEST" = "false" ] && [ "$TRAVIS_BRANCH" = "HelmReorg" ]; then
+  if [ "$TRAVIS_PULL_REQUEST" = "false" ] && [ "$TRAVIS_BRANCH" = "master" ]; then
     git config --global user.email "travis@travis-ci.org";
     git config --global user.name "travis-ci";
     mkdir gh-pages; # Now update gh-pages
