--- a/pubsubplus/templates/solaceStatefulSet.yaml
+++ b/pubsubplus/templates/solaceStatefulSet.yaml
@@ -4,15 +4,15 @@ kind: StatefulSet
 metadata:
   name: {{ template "solace.fullname" . }}
   labels:
-    app: {{ template "solace.name" . }}
-    chart: {{ .Chart.Name }}-{{ .Chart.Version | replace "+" "_" }}
-    release: {{ .Release.Name }}
-    heritage: {{ .Release.Service }}
+    app.kubernetes.io/name: {{ template "solace.name" . }}
+    app.kubernetes.io/instance: {{ .Release.Name }}
+    app.kubernetes.io/managed-by: {{ .Release.Service }}
+    helm.sh/chart: {{ .Chart.Name }}-{{ .Chart.Version }}
 spec:
   selector:
     matchLabels:
-      app: {{ template "solace.name" . }}
-      release: {{ .Release.Name }}
+      app.kubernetes.io/name: {{ template "solace.name" . }}
+      app.kubernetes.io/instance: {{ .Release.Name }}
   serviceName: {{ template "solace.fullname" . }}-discovery
   replicas: {{- if .Values.solace.redundancy }} 3 {{- else }} 1 {{- end }}
   podManagementPolicy: Parallel
@@ -21,16 +21,28 @@ spec:
   template:
     metadata:
       labels:
-        app: {{ template "solace.name" . }}
-        release: {{ .Release.Name }}
+        app.kubernetes.io/name: {{ template "solace.name" . }}
+        app.kubernetes.io/instance: {{ .Release.Name }}
     spec:
+{{- if .Values.image.pullSecretName }}
+      imagePullSecrets:
+      - name: {{ .Values.image.pullSecretName}}
+{{- end}}
+{{- if .Values.securityContext.enabled }}
+      securityContext:
+        fsGroup: {{ .Values.securityContext.fsGroup | int64 }}
+      {{- if and (.Values.securityContext.runAsUser) }}
+        runAsUser: {{ .Values.securityContext.runAsUser | int64 }}
+      {{- end }}
+{{- end }}
+      terminationGracePeriodSeconds: 1200
       containers:
       - name: {{ .Chart.Name }}
         image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
-        imagePullPolicy: {{ .Values.image.pullPolicy }}
+        imagePullPolicy: {{ .Values.image.pullPolicy | default "IfNotPresent" }}
         resources:
           requests:
-{{- if eq .Values.solace.size "dev100" }}
+{{- if eq .Values.solace.size "dev" }}
             cpu: "0.2"
             memory: 0.8Gi
 {{- else if eq .Values.solace.size "prod100" }}
@@ -50,7 +62,7 @@ spec:
             memory: 56Gi
 {{- end }}
           limits:
-{{- if eq .Values.solace.size "dev100" }}
+{{- if eq .Values.solace.size "dev" }}
             cpu: "1"
             memory: 2Gi
 {{- else if eq .Values.solace.size "prod100" }}
@@ -79,13 +91,17 @@ spec:
           periodSeconds: 5
           exec:
             command:
-            - {{ .Values.filepaths.configmap }}/readiness_check.sh
+            - /mnt/disks/solace/readiness_check.sh
         securityContext:
           privileged: false
+{{- if semverCompare "<9.4" (default "9.3" (regexFind "\\d+\\.\\d+" .Values.image.tag)) }}
+          # need capabilities opened up if PubSub+ version is lower than 9.4
+          # default "9.3" to be changed to 9.4 after 9.4 released
           capabilities:
             add:
               - IPC_LOCK
               - SYS_NICE
+{{- end }}
         env:
         - name: STATEFULSET_NAME
           value: {{ template "solace.fullname" . }}
@@ -93,27 +109,34 @@ spec:
           valueFrom:
             fieldRef:
               fieldPath: metadata.namespace
-# [TODO] not using correct method of finding ordinal until we bump min Kubernetes release above 1.8.1
- #       - name: STATEFULSET_ORDINAL
- #         valueFrom:
- #           fieldRef:
- #             fieldPath: metadata.annotations['annotationKey']
-
+        - name: TZ
+          value: {{ printf "%s/%s" ":/usr/share/zoneinfo" (default "UTC" .Values.solace.timezone) }}
+        - name: UMASK
+          value: "0022"
         command:
          - bash
          - "-ec"
          - |
-           source {{ .Values.filepaths.configmap }}/init.sh
+           source /mnt/disks/solace/init.sh
            # not using postinstall hooks because of order dependencies
-           # launch config check then Solace so VCMR can provide return code
-           nohup {{ .Values.filepaths.configmap }}/config-sync-check.sh &
+           # launch config check - readiness check script will be launched by readinessProbe
+           nohup /mnt/disks/solace/config-sync-check.sh &
            /usr/sbin/boot.sh
-
+        lifecycle:
+          preStop:
+            exec:
+              command:
+               - bash
+               - "-ec"
+               - |
+                 while ! pgrep solacedaemon ; do sleep 1; done
+                 killall solacedaemon; 
+                 while [ ! -d /usr/sw/var/db.upgrade ]; do sleep 1; done;
         volumeMounts:
         - name: config-map
-          mountPath: {{ .Values.filepaths.configmap }}
+          mountPath: /mnt/disks/solace
         - name: secrets
-          mountPath: {{ .Values.filepaths.secrets }}
+          mountPath: /mnt/disks/secrets
           readOnly: true
         - name: dshm
           mountPath: /dev/shm
@@ -132,15 +155,17 @@ spec:
         - name: data
           mountPath: /var/lib/solace/diags
           subPath: diags
-{{- if not .Values.storage.nfs }}
-        # only mount when not using nfs
+        {{- if and (not .Values.storage.slow) (not .Values.storage.nfs) }}
+        # only mount when not using slow storage
         - name: data
           mountPath: /usr/sw/internalSpool/softAdb
           subPath: softAdb
-{{- end }} #end !nfs
-        ports:{{ range $item := .Values.service.internalPort }}
-        - containerPort: {{ $item.port }}
-          protocol: {{ $item.protocol }}{{end}}
+        {{- end }}
+        ports:
+        {{- range $item := .Values.service.ports }}
+        - containerPort: {{ $item.containerPort }}
+          protocol: {{ $item.protocol }}
+        {{- end}}
       volumes:
         - name: config-map
           configMap:
@@ -153,36 +178,25 @@ spec:
         - name: dshm
           emptyDir:
             medium: Memory
-{{- if .Values.storage }}
-  {{- if not .Values.storage.persistent }}
+{{- if and (.Values.storage) (not .Values.storage.persistent) }}
         - name: data
-    {{- if .Values.storage.hostPath }}
-          hostPath:
-            path: {{ .Values.storage.hostPath }}
-    {{- else if .Values.storage.existingVolume }}
-      {{- if eq .Values.cloudProvider  "aws" }}
-          awsElasticBlockStore:
-            volumeID: {{ .Values.storage.existingVolume }}
-            fsType: xfs
-      {{- else if eq .Values.cloudProvider "gcp" }}
-          gcePersistentDisk:
-            pdName: {{ .Values.storage.existingVolume }}
-            fsType: ext4
-      {{- end}}
-    {{- end }} #end !persistent
-  {{ else }}
+          emptyDir: {}
+{{- else if and (.Values.storage) (.Values.storage.customVolumeMount) }}
+        - name: data
+          {{- with .Values.storage.customVolumeMount }}
+{{ tpl . $ | indent 10 }}
+          {{- end }}
+{{- else }}
+  # This is the default way to acquire volume for the data mount
   volumeClaimTemplates:
   - metadata:
       name: data
     spec:
   {{- if .Values.storage.useStorageClass }}
       storageClassName: {{ .Values.storage.useStorageClass }}
-  {{- else if .Values.storage.type }}
-      storageClassName: {{ .Release.Name }}-{{ .Values.storage.type }}
   {{- end}}
       accessModes: [ "ReadWriteOnce" ]
       resources:
         requests:
           storage: {{ .Values.storage.size}}
-  {{- end }}
-{{- end}} #end storage
+{{- end }}
