--- a/pubsubplus/Chart.yaml
+++ b/pubsubplus/Chart.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 description: Deploy Solace PubSub+ Event Broker Singleton or HA redundancy group onto a Kubernetes Cluster
 name: pubsubplus
 version: 2.0.0
-icon: https://solace.com/wp-content/uploads/2018/05/Solace_Logo_Green_360x100-1.png
+icon: https://solaceproducts.github.io/pubsubplus-kubernetes-quickstart/images/PubSubPlus.png
 maintainers:
   - email: balazs.czoma@solace.com
     name: bczoma
