--- a/pubsubplus/Chart.yaml
+++ b/pubsubplus/Chart.yaml
@@ -4,14 +4,10 @@ name: pubsubplus
 version: 2.0.0
 icon: https://solaceproducts.github.io/pubsubplus-kubernetes-quickstart/images/PubSubPlus.png
 maintainers:
-  - email: balazs.czoma@solace.com
-    name: bczoma
-  - email: ken.barr@solace.com
-    name: KenBarr
-  - email: philippe.khalife@solace.com
-    name: PhilippeKhalife
-  - email: support@solace.com
-    name: Solace Support
+  - name: Solace Community Forum
+    url: https://solace.community/
+  - name: Solace Support
+    url: https://solace.com/support/
 home: https://dev.solace.com
 sources:
    - https://github.com/SolaceProducts/pubsubplus-kubernetes-quickstart
