--- a/pubsubplus/templates/podModRbac.yaml
+++ b/pubsubplus/templates/podModRbac.yaml
@@ -1,4 +1,16 @@
 # Deployment requires the capability of patching the pod to indicate active state for load balancing
+{{- if .Values.serviceAccount.create }}
+kind: ServiceAccount
+apiVersion: v1
+metadata:
+  name: {{ template "solace.serviceAccountName" . }}
+  labels:
+    app.kubernetes.io/name: {{ template "solace.name" . }}
+    app.kubernetes.io/instance: {{ .Release.Name }}
+    app.kubernetes.io/managed-by: {{ .Release.Service }}
+    helm.sh/chart: {{ .Chart.Name }}-{{ .Chart.Version }}
+---
+{{- end }}
 kind: Role
 apiVersion: rbac.authorization.k8s.io/v1
 metadata:
@@ -17,7 +29,6 @@ roleRef:
   kind: Role
   name: {{ template "solace.fullname" . }}-podtagupdater
 subjects:
-- kind: Group
-  name: system:serviceaccounts
-  apiGroup: rbac.authorization.k8s.io
+- kind: ServiceAccount
+  name: {{ template "solace.serviceAccountName" . }}
 
