--- a/.travis.yml
+++ b/.travis.yml
@@ -30,8 +30,7 @@ script:
 - export TESTCLUSTERNAME="sol-gke-travistest-$(date +%s)"
 - wget https://raw.githubusercontent.com/SolaceProducts/solace-gke-quickstart/master/scripts/create_cluster.sh
 - chmod 755 create_cluster.sh
-- "./create_cluster.sh -z us-east4-a,us-east4-b,us-east4-c -c $TESTCLUSTERNAME -m
-  n1-standard-2"
+- "./create_cluster.sh -z us-east4-a,us-east4-b,us-east4-c -c $TESTCLUSTERNAME -m e2-standard-2"
 - gcloud container clusters get-credentials $TESTCLUSTERNAME --zone us-east4-a --project
   capable-stream-180018
 - popd
