Initial server certificate support work

--- a/pubsubplus/templates/solaceStatefulSet.yaml
+++ b/pubsubplus/templates/solaceStatefulSet.yaml
@@ -120,7 +120,7 @@ spec:
            source /mnt/disks/solace/init.sh
            # not using postinstall hooks because of order dependencies
            # launch config check - readiness check script will be launched by readinessProbe
-           nohup /mnt/disks/solace/setup-config-sync.sh &
+           nohup /mnt/disks/solace/startup-broker.sh &
            /usr/sbin/boot.sh
         lifecycle:
           preStop:
@@ -138,6 +138,11 @@ spec:
         - name: secrets
           mountPath: /mnt/disks/secrets
           readOnly: true
+{{- if and (.Values.tls) (.Values.tls.enabled) }}
+        - name: server-certs
+          mountPath: /mnt/disks/certs/server
+          readOnly: false
+{{- end }}
         - name: dshm
           mountPath: /dev/shm
         - name: data
@@ -178,6 +183,12 @@ spec:
           secret:
             secretName: {{ template "solace.fullname" . }}-secrets
             defaultMode: 0400
+{{- if and (.Values.tls) (.Values.tls.enabled) }}
+        - name: server-certs
+          secret:
+            secretName: {{ required "A secret containing the server key and certificates is required when TLS in enabled" .Values.tls.serverCertificatesSecret }}
+            defaultMode: 0400
+{{- end }}
         - name: dshm
           emptyDir:
             medium: Memory
