Added wait and error handling when attempting to clean up disks

--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -127,4 +127,4 @@ jobs:
       if: ${{ always() }}
       run: |
         gcloud container clusters delete $TESTCLUSTERNAME --quiet --zone us-east4-a
-        gcloud compute disks list | grep gha-test | sed 1d $rpt | while read -r a b c; do gcloud compute disks delete $a --zone $b --quiet; done
+        sleep 20; gcloud compute disks list | grep gha-test | sed 1d $rpt | while read -r a b c; do gcloud compute disks delete $a --zone $b --quiet || echo "Run into issues with deleting $a, skipping"; done
